--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,8 @@ jobs:
         with:
           python-version: 3.9
       - name: Install dependencies
+        run: pip install -r requirements.txt
+      - name: Install dependencies (dev)
         run: pip install -r requirements_dev.txt
       - name: Run tests and collect coverage
         run: |
