--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,8 @@ jobs:
         run: pip install -r requirements_dev.txt
       - name: Run tests and collect coverage
         run: |
-          pytest --cov=./
+          pytest --cov=./pincer
+          coverage xml
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
         with:
